# autopilot-gtk

./: CMakeLists.txt  README.md
debian/: changelog  control  copyright  rules
debian/tests/: autopilot  control
lib/: CMakeLists.txt  GtkNode.cpp  GtkNode.h  GtkRootNode.cpp  GtkRootNode.h  Introspection.cpp  Introspection.h  IntrospectionService.c  IntrospectionService.h  IntrospectionService.xml  Variant.cpp  Variant.h  autopilot_types.h  main.cpp  main.h
tests/: hello_color.py  hello_color.ui  test-matching.sh
tests/autopilot/tests/: test_actions.py  test_gnome_app.py  test_gnome_system_log.py  test_matching_properties.py  test_properties.py  test_widget_tree.py  test_xpath_query.py
